fixed multiple spelling and grammatical errors, fixed the relative path calculation for images in the paginate case and added a css rule to remove the side left image if the screen gets too small

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -52,6 +52,11 @@ div.post-entry param.hidde-after-preview + *, div.post-entry div.hidde-after-pre
 .flex-item-right {
   flex: 75%;
 }
+@media only screen and (max-width: 1280px) { /* remove left side image when screen to small */
+  .flex-item-left {
+    display: none;
+  }
+}
 
 
 /* homepage main content about block */
